<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"/>

    <GridView
        android:id="@+id/pictures_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:horizontalSpacing="5dp"
        android:numColumns="2"
        android:padding="5dp"
        android:verticalSpacing="5dp"
        android:visibility="gone"/>
</FrameLayout>