<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <ImageView
            android:id="@+id/picture_detail_bg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_from_grid_to_detail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="10dp"
            android:text="A long long description"/>

        <Button
            android:id="@+id/scroll_to_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="scroll to me"/>

    </LinearLayout>
</ScrollView>